# mini-p

./: .env.example  .gitignore  README.md  app.py  chatbot.db-shm  chatbot.db-wal  langgraph_backend.py  pyproject.toml
src/: config.py  document_loader.py  embeddings.py  judge.py  rag_chain.py  resource_manager.py  text_splitter.py  vector_store.py
