[project]
name = "project"
version = "0.1.0"
description = "RAG Pipeline with LangGraph, Groq, FAISS, and Nomic Embeddings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-groq",
    "langchain-nomic",
    "langchain-community",
    "faiss-cpu",
    "langgraph",
    "streamlit",
    "pypdf",
    "python-dotenv",
    "nomic",
    "langchain",
    "langchain-text-splitters",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
