[project]
name = "project"
version = "0.1.0"
description = "RAG Pipeline with LangGraph, Groq, FAISS, and Nomic Embeddings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-ollama",
    "langchain-openai",
    "langchain-community",
    "faiss-cpu",
    "langgraph",
    "streamlit",
    "pypdf",
    "python-dotenv",
    "langchain",
    "langchain-text-splitters",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
package = false
